--- a/views/405.html
+++ b/views/405.html
@@ -1,90 +1,98 @@
-
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>405 | Método no permitido.</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <title>405 | Método no permitido.</title>
 
-  <style type="text/css">
-    body {
-      padding: 30px 20px;
-      font-family: -apple-system, BlinkMacSystemFont,
-        "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-        "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-      color: #727272;
-      line-height: 1.6;
-    }
+        <style type="text/css">
+            body {
+                padding: 30px 20px;
+                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
+                    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+                    'Droid Sans', 'Helvetica Neue', sans-serif;
+                color: #727272;
+                line-height: 1.6;
+            }
 
-    .container {
-      max-width: 500px;
-      margin: 0 auto;
-    }
+            .container {
+                max-width: 500px;
+                margin: 0 auto;
+            }
 
-    h1 {
-      margin: 0 0 40px;
-      font-size: 60px;
-      line-height: 1;
-      color: #252427;
-      font-weight: 700;
-    }
+            h1 {
+                margin: 0 0 40px;
+                font-size: 60px;
+                line-height: 1;
+                color: #252427;
+                font-weight: 700;
+            }
 
-    h2 {
-      margin: 100px 0 0;
-      font-size: 20px;
-      font-weight: 600;
-      letter-spacing: 0.1em;
-      color: #A299AC;
-      text-transform: uppercase;
-    }
+            h2 {
+                margin: 100px 0 0;
+                font-size: 20px;
+                font-weight: 600;
+                letter-spacing: 0.1em;
+                color: #a299ac;
+                text-transform: uppercase;
+            }
 
-    p {
-      font-size: 16px;
-      margin: 1em 0;
-    }
+            p {
+                font-size: 16px;
+                margin: 1em 0;
+            }
 
-    .go-back a {
-      display: inline-block;
-      margin-top: 3em;
-      padding: 10px;
-      color: #1B1A1A;
-      font-weight: 700;
-      border: solid 2px #e7e7e7;
-      text-decoration: none;
-      font-size: 16px;
-      text-transform: uppercase;
-      letter-spacing: 0.1em;
-    }
+            .go-back a {
+                display: inline-block;
+                margin-top: 3em;
+                padding: 10px;
+                color: #1b1a1a;
+                font-weight: 700;
+                border: solid 2px #e7e7e7;
+                text-decoration: none;
+                font-size: 16px;
+                text-transform: uppercase;
+                letter-spacing: 0.1em;
+            }
 
-    .go-back a:hover {
-      border-color: #1B1A1A;
-    }
+            .go-back a:hover {
+                border-color: #1b1a1a;
+            }
 
-    @media screen and (min-width: 768px) {
-      body {
-        padding: 50px;
-      }
-    }
+            @media screen and (min-width: 768px) {
+                body {
+                    padding: 50px;
+                }
+            }
 
-    @media screen and (max-width: 480px) {
-      h1 {
-        font-size: 48px;
-      }
-    }
-  </style>
-</head>
-<body>
+            @media screen and (max-width: 480px) {
+                h1 {
+                    font-size: 48px;
+                }
+            }
+        </style>
+    </head>
+    <body>
+        <div class="container">
+            <a href="https://portalmybot.com/" class="brand"
+                ><img
+                    src="https://portalmybot.com/assets/badges/v1/badge_62.png"
+                    width="140"
+                    height="140"
+            /></a>
 
-<div class="container">
-  <a href="https://portalmybot.com/" class="brand"><img src="https://portalmybot.com/assets/badges/v1/badge_62.png" width="140" height="140"></a>
+            <h2>405</h2>
+            <h1>Método no permitido.</h1>
 
-  <h2>405</h2>
-  <h1>Método no permitido.</h1>
+            <p>
+                No Permitido ocurre cuando el servidor web está configurado de
+                una forma que no permita que usted pueda llevar a cabo una
+                acción para un URL en particular. Es un código de respuesta de
+                estado HTTP que indica que el método requerido es conocido por
+                el servidor, pero no es soportado por la fuente objetivo.
+            </p>
 
-  <p>No Permitido ocurre cuando el servidor web está configurado de una forma que no permita que usted pueda llevar a cabo una acción para un URL en particular. Es un código de respuesta de estado HTTP que indica que el método requerido es conocido por el servidor, pero no es soportado por la fuente objetivo.</p>
-
-  <span class="go-back"><a href="/">Volver atrás</a></span>
-</div>
-
-</body>
+            <span class="go-back"><a href="/">Volver atrás</a></span>
+        </div>
+    </body>
 </html>
